Components on landingpage

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $color-black: oklch(0.15 0.02 120);
 $color-white: oklch(1 0 0);
 $color-yellow: oklch(0.75 0.2 60);
 $color-red: oklch(0.65 0.25 25);
+$color-dark-bg: #101f02;
+$color-whatsaap: #25d366;
 
 // 🌈 Paleta extendida
 $color-background: oklch(0.98 0.01 120);
@@ -15,6 +17,7 @@ $color-border: oklch(0.9 0.01 120);
 // 💬 Ofertas
 $offer-red: oklch(0.65 0.25 25);
 $offer-yellow: oklch(0.75 0.2 60);
+$offer-green: #b1d48a; // #c0d6a7;
 $success-green: oklch(0.35 0.15 140);
 $dark-bg: oklch(0.15 0.02 120);
 
