--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   color: white;
-  background: $success-green; //linear-gradient(135deg, $success-green, $color-dark-bg);
+  background: linear-gradient(120deg, $success-green, $color-foreground);
   overflow: hidden;
 
   .overlay {
@@ -31,12 +31,12 @@
 
   .content {
     .title {
-      font-size: 2.25rem;
+      font-size: 3.55rem;
       font-weight: 800;
     }
     .subtitle {
       margin-top: 12px;
-      font-size: 1.125rem;
+      font-size: 1.5rem;
       opacity: 0.95;
     }
     .cta {
@@ -50,6 +50,7 @@
       gap: 8px;
       align-items: center;
       cursor: pointer;
+      font-size: 1.02rem;
     }
 
     .ctaIcon {
@@ -64,7 +65,7 @@
     }
     img {
       width: 100%;
-      height: 320px;
+      height: 610px;
       object-fit: cover;
       border-radius: 16px;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
