chaging header, and adding github pages

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -95,13 +95,12 @@
   /* Footer bottom row */
   .bottom {
     margin-top: 18px;
-    border-top: 1px solid rgba(255, 255, 255, 0.06);
     padding-top: 12px;
     @include container();
     display: flex;
     flex-direction: column;
     gap: 8px;
-    align-items: center;
+    align-items: start;
   }
 
   .leftBottom {
