Changing logo, and SEO

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,7 +23,7 @@
   align-items: center;
   gap: 12px;
 
-  .logo {
+  .logo img {
     width: 40px;
     height: 40px;
     background: $success-green;
