--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -26,7 +26,7 @@
       gap: 12px;
       align-items: center;
 
-      .logo {
+      .logo img {
         width: 60px;
         height: 60px;
         background: $success-green;
